# habitable

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  allowed_signers  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  reviewer-intake.yml
.github/rulesets/: main-branch.json  release-tags.json
.github/workflows/: a11y-docs-only.yml  a11y.yml  ci.yml  codeql.yml  container-scan.yml  i18n.yml  pages.yml  release.yml  scorecard.yml  secret-scan-scheduled.yml  tsa-integration.yml  zizmor.yml
app/: app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
app/i18n/: en.json  es.json
contrib/: README.md  bagit-packet-adapter.md  bagit_packet_adapter.py  legal_aid_importer.py
docs/: ARCHITECTURE.md  DOCUMENTATION-AUDIT.md  I18N.md  PROJECT-SCOPE.md  README.md  RESEARCH-ROADMAP.md  RESPONSIBLE-TECH-AUDITS.md  USER-RESEARCH.md  bundle-schema.md  capabilities.md  commons.md  crypto-spec.md  custody-transfer.md  embedding-the-verifier.md  evidence-kernel.md  evidence-method.md  evidence-pack.md  funding-impact-brief.md  good-first-issues.md  governance.md  key-custody-playbook.md  key-management.md  letter-generator.md  localization-guide.md  mobile.md  novel-use-cases-plan.md  packet-bundle.schema.json  packet-manifest.schema.json  performance-budget.md  privacy.md  prove-no-plaintext.md  relay-deploy.md  relay-observability-matrix.md  relay-operator-self-audit.md  releasing.md  roadmap-drain-2026-07-22.md  setup-guide.md  sharing-trust-model.md  sneakernet-sync.md  sustainability.md  (+4 more)
docs/accessibility/: ACR.md  manual-testing.md
docs/adoption/: README.md  board-risk-briefing.md  quickstart-en.md  quickstart-es.md  workshop-facilitator-guide.md
docs/adr/: 0000-record-architecture-decisions.md  0001-record-architecture-decisions.md  0002-state-based-crdt-and-hlc.md  0003-rfc3161-with-offline-dev-tsa.md  0004-accessible-html-packet-as-conformant-rendering.md  0005-i18n-g12-cldr-na-by-design.md  0006-solo-maintainer-review-count-exception.md  0007-limits-first-distress-decoy-vault-model.md  0008-authenticated-case-bound-sync-v2.md  0008-separate-integrity-timestamp-trust-and-readiness.md  0009-authenticated-case-bound-sync-v2.md  0010-profile-driven-evidence-workflows.md  template.md
docs/audits/: README.md  onboarding.md  packet-attack-redteam.md  plain-language-review.md  scorecard-2026-07.md  threat-model-baseline.md
docs/ideation/: 01-deep-dive.md  02-large-scale-fixes.md  03-expansions.md  04-impact-and-sequencing.md  README.md
docs/legal/: README.md  california-evidence-notes.md  declaration-template.md  foundation-guidance.md  minimal-disclosure.md
docs/migrations/: packet-v3-timeline.md  packet-v4-workflows.md
docs/recruitment/: README.md  audit-funding.md  role-accessibility-tester.md  role-auditor.md  role-legal-reviewer.md  role-pilot-partner.md
docs/research/: competitive-analysis.md  execution-log.md  native-mobile-packaging-spike.md  product-expansion-seo-2026-07-09.md  product-expansion-seo-sweep-2-2026-07-10.md  synthetic-personas-feedback.md
docs/standards/: .standards-version  README.md
relay/: Dockerfile  docker-compose.yml
scripts/: bootstrap.sh  check_bcp47.py  check_doc_links.py  check_i18n_parity.py  check_i18n_utf8.py  check_reproducible_build.py  check_reproducible_relay_image.sh  gen_kernel_corpus.py  make_golden_packet.py  make_site_sample.py  render_app_screenshots.py  smoke_test_installed_wheel.py
site/: content.css  home.css  index.html  robots.txt  sitemap.xml
site/documentation-checklist/: index.html
site/guides/housing-inspection-records/: index.html
site/guides/preserve-maintenance-request-records/: index.html
site/how-it-works/: index.html
site/inspectors-code-enforcement/: index.html
site/legal-aid-reviewers/: index.html
site/review/: index.html  review.css  walkthrough.js
site/review/changes/: index.html
site/sample-packet/: SYNTHETIC-AUTHORITY.txt  bundle.json  bundle.sig.json  packet.html  synthetic-timestamp-authority.pem
site/templates/tenant-union-building-condition-survey/: index.html  tenant-union-building-condition-survey.csv
site/tenant-unions/: index.html
site/trust-limitations/: index.html
site/verify/: index.html  verifier.js
src/habitable/: __init__.py  __main__.py  anchor.py  appserver.py  artifact.py  bundleview.py  campaign.py  canonical.py  capsule.py  capture.py  cli.py  clock.py  commons.py  config.py  crypto.py  demo.py  diff.py  disclosure.py  errors.py  evidence.py  exif.py  handoff.py  htmlpacket.py  i18n.py  kernel.py  letter.py  media.py  model.py  obslog.py  packet.py  pairing.py  patterns.py  pdf.py  private_temp.py  prove.py  relay.py  sensor.py  share.py  strength.py  sync.py  (+7 more)
tests/: conftest.py  test_anchor.py  test_app_accessibility.py  test_app_axe.py  test_app_i18n.py  test_app_keyboard.py  test_app_pwa.py  test_appserver.py  test_archive.py  test_artifact_workflows.py  test_bundleview.py  test_campaign.py  test_capsule.py  test_cli_demo.py  test_cli_key.py  test_cli_recur.py  test_cli_share_letter.py  test_cli_social_recovery.py  test_cli_sync_file.py  test_cli_workflows.py  test_commons.py  test_contrib_bagit_adapter.py  test_contrib_importer.py  test_court_bundle.py  test_critical_paths.py  test_datacost.py  test_diff.py  test_doc_links.py  test_evidence_exif.py  test_foundation.py  test_golden.py  test_guards.py  test_htmlpacket.py  test_i18n_format.py  test_kernel_golden.py  test_latency.py  test_letter.py  test_media_pipeline.py  test_model.py  test_obslog.py  (+34 more)
tests/golden/kernel/: vectors.json
tests/golden/packet-v1/: bundle.json  bundle.sig.json
tests/golden/packet-v2/: bundle.json  bundle.sig.json
tests/golden/packet-v3/: bundle.json  bundle.sig.json
