# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright 2026 Chelsea Kelly-Reif
[project]
name = "habitable"
version = "0.2.0"
description = "Court-ready, offline-first, end-to-end-encrypted habitability evidence for tenant unions."
readme = "README.md"
requires-python = ">=3.14"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Chelsea Kelly-Reif" }]
keywords = [
    "tenant-rights",
    "evidence",
    "rfc3161",
    "trusted-timestamping",
    "local-first",
    "crdt",
    "end-to-end-encryption",
    "chain-of-custody",
    "civic-tech",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=44",
    "asn1crypto>=1.5",
    "reportlab>=5.0.0",
    "pillow>=12.3.0",
    "piexif>=1.1.3",
]

[project.optional-dependencies]
# The standalone verifier deliberately depends on as little as possible, so a
# court or legal-aid group can run it without pulling the whole stack. It is also
# offered under Apache-2.0 (see NOTICE) for embedding.
verify = ["cryptography>=44", "asn1crypto>=1.5"]
# The reusable, local-first evidence kernel (EXP-13): canonical + evidence + tsa +
# verify + crypto-verify, exposed as the stable, embeddable public surface
# `habitable.kernel`, under the same Apache-2.0 additional permission. Same minimal
# runtime as `verify`; other civic tools adopt this subset without copying code. See
# docs/evidence-kernel.md for the API + semver contract and the golden corpus.
kernel = ["cryptography>=44", "asn1crypto>=1.5"]

[project.scripts]
habitable = "habitable.cli:main"

[project.urls]
Homepage = "https://github.com/ChelseaKR/habitable"
Source = "https://github.com/ChelseaKR/habitable"
Issues = "https://github.com/ChelseaKR/habitable/issues"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5",
    "hypothesis>=6.156.3",
    "mypy>=2.2.0",
    "ruff>=0.15.20",
    "pip-audit>=2.7",
    "playwright>=1.61.0",
    "axe-playwright-python>=0.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/habitable"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "C90",  # mccabe complexity
]
ignore = [
    "S101", # assert is fine in tests and internal invariants
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802", "N803"]
# media.py shells out to a fixed ffmpeg/ffprobe binary (never a shell, executable
# is a module constant, args are file paths passed as a list) -- S603's "untrusted
# input" concern does not apply to these controlled invocations (EXP-07).
"src/habitable/media.py" = ["S603"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["piexif.*", "reportlab.*", "PIL.*", "asn1crypto.*", "axe_playwright_python.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
testpaths = ["tests"]
filterwarnings = ["error"]
markers = [
    "a11y: browser-based accessibility (axe-core) checks; needs Playwright + Chromium",
    "integration: hits a real external service (e.g. a public RFC 3161 TSA); needs network",
]

[tool.coverage.run]
branch = true
source = ["habitable"]

[tool.coverage.report]
# Baseline floor: 85% branch coverage (--cov-fail-under in `make cov`). The
# security/crypto-critical modules — src/habitable/{crypto,vault,tsa,verify}.py —
# carry a stricter per-module 95% floor, enforced by the scoped
# `coverage report --include=… --fail-under=95` step in `make cov` (and CI via
# `make verify`); see CODE-QUALITY-STANDARD "per-module floors".
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
